Add ability to make http requests

--- a/bank-app-frontend/bank-app-frontend.csproj
+++ b/bank-app-frontend/bank-app-frontend.csproj
@@ -8,4 +8,8 @@
     <AssemblyName>$(AssemblyName.Replace(' ', '_'))</AssemblyName>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Net.Http" Version="4.3.4" />
+  </ItemGroup>
+
 </Project>
