Added dashboard component

--- a/bank-app-frontend/bank-app-frontend.csproj
+++ b/bank-app-frontend/bank-app-frontend.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="Components\Pages\Weather.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Blazor.Bootstrap" Version="1.11.1" />
     <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
