--- a/bank-app-frontend/appsettings.Development.json
+++ b/bank-app-frontend/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "FrontEndConnection": "http://localhost:5091"
   }
 }
