--- a/bank-app-frontend/appsettings.json
+++ b/bank-app-frontend/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "FrontEndConnection": "http://host.docker.internal:9900"
+  }
 }
